# fabrication-service

./: .gitignore  Dockerfile  Model.py  Pipfile  app.py  emailapi.py  ignore.py  pyproject.toml  requirements.txt  run.py  submissionlifescycle.py
.github/workflows/: build.yml
control/: fabricationlifecycle.py  submissionlifescycle.py
controllers/: fabricationcontrol.py  fabricationlifecycle.py  submissioncontrol.py  submissionlifescycle.py  usercontrol.py
model/: fabricationitem.py  submissionitem.py
models/: fabricationitem.py  submissionitem.py  useritem.py
project/: Email.py  Pipfile  app.py  config.py  requirements.txt
project/resources/: Fabrication.py
resources/: Fabrication.py  Submission.py  loginapi.py  user.py
