[tool.poetry]
name = "fabrication-service"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson <jackson@justjackson.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
marshmallow = "^3.8.0"
flask-marshmallow = "^0.13.0"
flask-sqlalchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"
flask-RESTful = "^0.3.8"
flask-Script = "^2.0.6"
flask-Migrate = "^2.5.3"
mongoengine = "^0.20.0"
python-dotenv = "^0.14.0"
Flask-Bcrypt = "^0.7.1"
Flask-JWT-Extended = "^3.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
